name:                browse
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
maintainer:          Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Browse
  build-depends:       base              >=4.7  && <4.8
                       bytestring        >=0.10 && <0.11
                       http-client       >=0.3  && <0.4
                       monad-control     >=0.3  && <0.4
                       mtl               >=2.2  && <2.3
                       resourcet         >=1.1  && <1.2
                       time              >=1.4  && <1.5
                       transformers      >=0.4  && <0.5
                       transformers-base >=0.4  && <0.5
  default-language:    Haskell2010
